--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
 			<version>4.5.13</version>
 		</dependency>
 
+		<!-- RABBITMQ -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
