--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -31,3 +31,12 @@ rabbitmq:
   consumer:
     payment-confirmed: ${PAYMENT_CONFIRMED:payment-aproved-ms-pix}
     payment-expired: ${PAYMENT_EXPIRED:payment-expired-ms-pix}
+
+
+storage:
+  s3:
+    bucket: ifood-teste
+    region: us-east-2
+    directoryPhotos: catalago
+    idKeyAccess: AKIA6ODU3YWAF2P7D3ZH
+    keyAccessSecret: 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
