--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.7.17</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.xmob</groupId>
+	<groupId>br.com.rifa</groupId>
 	<artifactId>orders</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>orders</name>
